--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="box">
       <div class="imgcontainer">
-        <img src="/images/image-omelette.jpeg" />
+        <img src="image-omelette.jpeg" />
       </div>
       <h2 id="heading">Simple Omelette Recipe</h2>
       <p class="intro">
